# deezer-qt

./: CMakeLists.txt  Makefile  README.md
src/: AnotherWindow.qml  IconButton.qml  PlayerWindow.qml  UnnamedWindow.qml  main.qml  qml.qrc
